# cesium-terrain-builder

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README-cmake.txt
src/: GDALTiler.cpp  GlobalGeodetic.cpp  GlobalGeodetic.hpp  GlobalMercator.cpp  GlobalMercator.hpp
tests/: CMakeLists.txt  ctb-tests.cpp  ctb-tests.h
tools/: ctb-tile.cpp
